# CDX12-Backend

./: .gitignore  CMakeLists.txt  README.md  TODOS.md  xmake.lua
core/: xmake.lua
core/include/CDX12/: Blob.h  CDX12.h  CmdListHandle.h  FrameResource.h  GCmdList.h  pch.h
core/src/: CmdListHandle.cpp  CmdQueue.cpp  DXUtil.cpp  DescriptorHeapMngr.cpp  FrameResourceMngr.cpp  GCmdList.cpp  VarSizeAllocMngr.cpp
core/src/Common/: Timer.cpp
core/src/DescriptorHeap/: CPUDescriptorHeap.cpp  DescriptorHeapAllocation.cpp  DescriptorHeapAllocationMngr.cpp  DynamicSuballocMngr.cpp
core/src/Math/: MathHelper.cpp
core/src/Resource/: Buffer.cpp  DefaultBuffer.cpp  Mesh.cpp  ReadbackBuffer.cpp  ResourceStateTracker.cpp  UploadBuffer.cpp
core/src/Shader/: PSOManager.cpp  Shader.cpp  ShaderMngr.cpp
core/src/Util/: ReflactableStruct.cpp  StackAllocator.cpp  xxhash.cpp
core/src/tinyobjloader/: tinyobjloader.cpp
docs/: GetRootSigFromShader.md  ResourceBinding.md
docs/cdx12-note/: Resource.md
include/CDX12/: CmdListHandle.h  CmdQueue.h  DXUtil.h  DescriptorHeapMngr.h  Device.h  FrameResource.h  FrameResourceMngr.h  GeneralDesc.h  RenderResourceMngr.h  VarSizeAllocMngr.h  pch.h
include/CDX12/Common/: Camera.h  DX12App.h  GameTimer.h  Light.h  Timer.h
include/CDX12/DescripitorHeap/: CPUDescriptorHeap.h  DescriptorHeapAllocation.h  DescriptorHeapAllocationMngr.h  DescriptorHeapWrapper.h  DynamicSuballocMngr.h  GPUDescriptorHeap.h  IDescriptorAllocator.h
include/CDX12/Geometry/: GeometryGenerator.h  Mesh.h  MeshMngr.h
include/CDX12/Material/: MaterialMngr.h  Texture.h  TextureMngr.h
include/CDX12/Math/: MathHelper.h  Quaternion.h
include/CDX12/Resource/: Buffer.h  BufferView.h  DefaultBuffer.h  DescHeapAllocView.h  Mesh.h  MeshMngr.h  ReadbackBuffer.h  Resource.h  ResourceStateTracker.h  Texture.h  UploadBuffer.h
src/: Blob.cpp  CmdListHandle.cpp  CmdQueue.cpp  DXUtil.cpp  DescriptorHeapMngr.cpp  Device.cpp  FrameResource.cpp  FrameResourceMngr.cpp  GCmdList.cpp  GeneralDesc.cpp  VarSizeAllocMngr.cpp
src/Common/: Camera.cpp  DX12App.cpp  Timer.cpp
src/DescriptorHeap/: CPUDescriptorHeap.cpp  DescriptorHeapAllocation.cpp  DescriptorHeapAllocationMngr.cpp  DescriptorHeapWrapper.cpp  DynamicSuballocMngr.cpp  GPUDescriptorHeap.cpp  IDescriptorAllocator.cpp
src/Material/: MaterialMngr.cpp
src/Math/: MathHelper.cpp  Quaternion.cpp
src/Resource/: Buffer.cpp  DefaultBuffer.cpp  Mesh.cpp  MeshMngr.cpp  ReadbackBuffer.cpp  ResourceStateTracker.cpp  Texture.cpp  UploadBuffer.cpp
src/Shader/: BasicShader.cpp  GlobalSamplers.cpp  PSOManager.cpp  Shader.cpp  ShaderMngr.cpp
src/Util/: ReflactableStruct.cpp  StackAllocator.cpp
src/core/: CmdListHandle.cpp  CmdQueue.cpp  DXUtil.cpp  DescriptorHeapMngr.cpp  Device.cpp  FrameResource.cpp  FrameResourceMngr.cpp  GCmdList.cpp  GeneralDesc.cpp  RenderResourceMngr.cpp  VarSizeAllocMngr.cpp
test/: xmake.lua
test/src/: main.cpp
(+53 files in other folders)
